# blue-donut

./: .flake8  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  notes.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tests.py  webpack.config.js
auth/: admin.py  api.py  apps.py  backend.py  models.py  serializers.py  urls.py  views.py
auth/migrations/: 0001_initial.py  0002_eveuser_active.py  0003_auto_20200207_1421.py  0004_remove_eveuser_active.py  0005_delete_evedata.py
blue_donut/: asgi.py  example.local.py  settings.py  urls.py  wsgi.py
bridges/: apps.py  backend.py  models.py  urls.py  views.py
bridges/migrations/: 0001_initial.py  0002_auto_20200210_1118.py
esi/: __init__.py  exceptions.py
eve_auth/: __init__.py  apps.py  backend.py  models.py  urls.py  views.py
eve_auth/migrations/: 0001_initial.py  0002_auto_20200117_1529.py  0003_auto_20200122_1016.py  (+1 more)
eve_esi/: __init__.py  exceptions.py  tasks.py
eve_sde/: command.py  models.py
feedback/: urls.py  views.py
frontend/: urls.py
homepage/: views.py
jump_bridges/: admin.py  apps.py  backend.py  forms.py  models.py  urls.py  views.py
management/: urls.py  views.py
map/: apps.py  models.py  serializers.py  urls.py  views.py
planner/: __init__.py  api.py  apps.py  backend.py  models.py  serializers.py  urls.py  views.py
report/: backend.py  urls.py  views.py
route_planner/: __init__.py  apps.py  backend.py  forms.py  models.py  urls.py  views.py
templates/: base.html  content_page.html
(+100 files in other folders)
