[tool.poetry]
name = "blue_donut"
version = "0.1.0"
description = ""
authors = ["Aimsucks <contact@aimsucks.space>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.1"
dhooks = "^1.1.3"
networkx = "^2.4"
esipy = "^1.0.0"
whitenoise = "^5.0.1"
django-bootstrap4 = "^1.1.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
