[tool.poetry]
name = "blue_donut"
version = "2.0"
description = "Tools to help Legacy Coalition members live in their space."
authors = ["Aimsucks <contact@aimsucks.space>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
djangorestframework = "^3.11.0"
esipy = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
